bk_ida/gccida/c1/offsettable_nonstrict_memref_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_nonstrict_memref_p/src/recog.c:2382:36: error: use of undeclared identifier 'machine_mode'
return offsettable_address_p( 0, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op), op->fld[0].rtx) != 0; 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_nonstrict_memref_p/src/recog.c:2382:51: error: expected expression
return offsettable_address_p( 0, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op), op->fld[0].rtx) != 0; 
                                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_nonstrict_memref_p/src/obj/recog.o] Error 1
